--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I've come to Github.
+        <p>I've come to <a href="https://uiwangr.github.io/blog/test1" target="_blank">Github</a>.
+
+
           
         </p>
       </div>
