--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I forked the professional repository from <a href="https://otiliastr.github.io/" target="_blank">Ms. Otilia</a>,
+        <p>I forked the professional repository from <a href="/blog/test1.html">Ms. Otilia</a>,
            and hosted this webpage on <em>Github</em>!
           
         </p>
